[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/scripts/new_mail.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/new_mail.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/mensagem_email.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Fredoka/Fredoka-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sprites/prosseguir.png" type="Texture" id=5]
[ext_resource path="res://scenes/Seta.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sprites/prosseguir2.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("new_email:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -535.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("new_email:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -114.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "new_mail"
tracks/0/type = "value"
tracks/0/path = NodePath("new_email:margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -535.0, -414.0, -273.0, -210.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("new_email:margin_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -114.0, 7.0, 148.0, 211.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("email:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("email:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("email:anchor_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("email:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("email:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 255.5, 749.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("email:margin_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -210.5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("email:margin_bottom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 210.5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "sair_email"
tracks/0/type = "value"
tracks/0/path = NodePath("email:anchor_left")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("email:anchor_top")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("email:anchor_right")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("email:anchor_bottom")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("email:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 255.5, 749.5 ), Vector2( 256, 1953 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("email:margin_top")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -210.5, -261.0, 33.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("email:margin_bottom")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 210.5, 160.0, 454.0 ]
}

[sub_resource type="DynamicFont" id=7]
size = 60
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -390.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 788.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 390.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1838.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureRect/Label:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TextureRect/TextureButton:margin_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 49.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TextureRect/TextureButton:margin_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 177.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TextureRect/TextureButton:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("TextureRect:anchor_left")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TextureRect:anchor_top")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("TextureRect:anchor_right")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("TextureRect:anchor_bottom")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "anim_text"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "mensagem"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:margin_left")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -390.0, -390.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:margin_top")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 788.0, -525.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:margin_right")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 390.0, 390.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:margin_bottom")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1838.0, 525.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect:rect_scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureRect:anchor_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TextureRect:anchor_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TextureRect:anchor_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TextureRect:anchor_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.5 ]
}

[sub_resource type="Animation" id=9]
resource_name = "prosseguir"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect/TextureButton:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 49.0, -185.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect/TextureButton:margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 177.0, -57.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect/TextureButton:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_email" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = -535.0
margin_right = 285.0
margin_bottom = -114.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="email" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 255.5
margin_top = -210.5
margin_right = 824.5
margin_bottom = 210.5
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="set_mail" type="AnimationPlayer" parent="."]
autoplay = "new_mail"
anims/RESET = SubResource( 1 )
anims/new_mail = SubResource( 2 )

[node name="sair_email" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/sair_email = SubResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -390.0
margin_top = 788.0
margin_right = 390.0
margin_bottom = 1838.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 390, 525 )
rect_clip_content = true
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = -464.0
margin_right = 331.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 7 )
text = "Olá, este é um email de parabenização.

Você passou no processo seletivo e entrará como um dos novos alunos de uma das melhores faculdades do país."
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.0
margin_top = 49.0
margin_right = 257.0
margin_bottom = 177.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 256.5, 64 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensagem" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/anim_text = SubResource( 8 )
anims/mensagem = SubResource( 6 )
anims/prosseguir = SubResource( 9 )

[node name="Seta" parent="." instance=ExtResource( 6 )]
margin_top = 1102.0
margin_bottom = 1382.0

[connection signal="pressed" from="email" to="." method="_on_email_pressed"]
[connection signal="animation_finished" from="set_mail" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="sair_email" to="." method="_on_sair_email_animation_started"]
[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="animation_finished" from="mensagem" to="." method="_on_mensagem_animation_finished"]
